--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,17 @@
 Flask==2.0.2
 python-dotenv==0.19.2
+google-cloud-datastore==2.4.0
+requests==2.27.1
+google-api-core==2.5.0
+google-api-python-client==2.41.0
+google-auth==2.6.0
+google-auth-httplib2==0.1.0
+google-cloud-core==2.2.2
+google-cloud-datastore==2.4.0
+google-cloud-firestore==2.3.4
+google-cloud-storage==2.2.1
+google-crc32c==1.3.0
+google-resumable-media==2.3.2
+googleapis-common-protos==1.55.0
+googlemaps==4.6.0
+Jinja2==3.0.3
